[project]
name = "materials-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "MagaliDellapiazza",email = "magali.dellapiazza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
package-mode = false 
dependencies = [
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain-core (>=1.0.2,<2.0.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
